--- a/app/stylesheets/forms.scss
+++ b/app/stylesheets/forms.scss
@@ -14,9 +14,7 @@ form { font-size:14px; }
 .check_boxes { position:relative; }
 .check_boxes fieldset { margin:0 0 5px 0; }
 .check_boxes fieldset li { float:left; width:30%; }
-.check_boxes p.inline-hints { }
-
-.inline-hints { margin:0.5em .25em; font-size:8px; }
+.inline-hints { margin:0.5em .25em; }
 
 form.formtastic fieldset { border:0; background:none; }
 
@@ -29,9 +27,11 @@ li.countdown .alert { color:red; }
 .edit-in-place { position:relative; }
 .edit-in-place:hover { background-color:transparent; }
 .edit-in-place form { display:none; }
-.edit-in-place .actions { display:none; position:absolute; left:-100px; background:#fff; border:1px solid #ccc; border-right:none; width:70px; border-radius:8px; -moz-border-radius:8px; -moz-border-radius-topright:0px; -moz-border-radius-bottomright:0px; top:10px; }
-.edit-in-place .actions li a { border: 1px solid transparent; display: block; font-size: 14px; padding: 0.2em 0.6em; width: 70px;}
-.edit-in-place .actions li a:hover { color:red; display:block; }
+.edit-in-place form textarea { font-size:13px; }
+.edit-in-place .actions { display:none; position:absolute; right:0px; width:120px; top:10px; }
+.edit-in-place .actions li { float:right; }
+.edit-in-place .actions li a { font-size: 11px; padding:0 0 0 20px; color:#666; float:right; }
+.edit-in-place .actions li a:hover { color:red; }
 .edit-in-place:hover .actions { display:block; }
 .edit-in-place h4 { font-size: 16px; }
 .edit-in-place p em { color:#777; }
@@ -39,3 +39,32 @@ li.countdown .alert { color:red; }
 .editing form.using fieldset { padding:0; }
 .editing .edit-in-place-show { display:none; }
 .edit-in-place-cancel { display:none; }
+.popup .using .countdown { width:auto; right:10px; }
+
+li.tool_name_autocomplete .inline-hints { display:none; }
+input.autocomplete-toolname { padding-left:26px; background:url(/images/placeholder.jpg) no-repeat 4px 4px; width:520px; }
+body.popup input.autocomplete-toolname { width:452px; }
+
+/* Jquery UI for autocomplete */
+.ui-widget-overlay { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
+.ui-widget-content { border: 1px solid #aaaaaa; background: #ffffff; color: #222222; }
+.ui-widget-content a { color: #222222; }
+
+.ui-autocomplete { position: absolute; cursor: default; }	
+* html .ui-autocomplete { width:1px; } /* without this, the menu expands to 100% in IE6 */
+
+.ui-autocomplete li a img { margin:0 8px 0 0; float:left; width:16px;}
+.ui-autocomplete li { }
+.ui-autocomplete li:nth-child(even) { background-color:#eee; }
+.ui-menu { list-style:none; padding: 2px; margin: 0; display:block; float: left; font-size:13px; }
+.ui-menu .ui-menu { margin-top: -3px; }
+.ui-menu .ui-menu-item { margin:0; padding: 0; zoom: 1; float: left; clear: left; width: 100%; }
+.ui-menu .ui-menu-item a { text-decoration:none; display:block; padding:.2em .4em; line-height:1.5; zoom:1; }
+.ui-menu .ui-menu-item a.ui-state-hover,.ui-menu .ui-menu-item a.ui-state-active { font-weight: normal; margin: -1px; }
+.ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default { border: 1px solid #d3d3d3; background: #e6e6e6; font-weight: normal; color: #555555; }
+.ui-state-default a, .ui-state-default a:link, .ui-state-default a:visited { color: #555555; text-decoration: none; }
+.ui-state-hover, .ui-widget-content .ui-state-hover, .ui-widget-header .ui-state-hover, .ui-state-focus, .ui-widget-content .ui-state-focus, .ui-widget-header .ui-state-focus { border: 1px solid #999999; background: #dadada; font-weight: normal; color: #212121; }
+.ui-state-hover a, .ui-state-hover a:hover { color: #212121; text-decoration: none; }
+.ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active { border: 1px solid #aaaaaa; background: #ffffff; font-weight: normal; color: #212121; }
+.ui-state-active a, .ui-state-active a:link, .ui-state-active a:visited { color: #212121; text-decoration: none; }
+.ui-widget :active { outline: none; }
