--- a/app/views/site_tools/_using.erb
+++ b/app/views/site_tools/_using.erb
@@ -1,5 +1,5 @@
 <li class="edit-in-place group ind using" id="using_<%= using.id %>" data-id="<%= using.id %>">
-  <h4><%= link_to using.tool.name, using.tool %></h4>
+  <h4><% if using.tool.has_favicon? %><a href="<%= tool_path(using.tool) %>" class="favicon"><img src="<%= using.tool.full_favicon_url %>" /></a><% end %><%= link_to using.tool.name, using.tool %></h4>
   <% if current_user.can_edit_using?(using, @site) %>
     <ul class="actions">
       <li><%= link_to "edit", "#", :class => "edit-in-place-edit" %></li>
