--- a/app/views/site_tools/create.js.erb
+++ b/app/views/site_tools/create.js.erb
@@ -1,4 +1,2 @@
-$('ul.usings').prepend("<%= escape_javascript(render(:partial => 'using', :locals => {:using => @using})) %>");
-$('#new_using')[0].reset();
-$('.token-input-token').remove();
-$('.token-input-input-token input').show();
+$('ul.usings').prepend("<%= escape_javascript(render(:partial => 'using', :locals => {:using => @using})) %>").find("li:first-child").effect("highlight", {}, 1000);
+reset_new_using_form();
