--- a/public/stylesheets/forms.css
+++ b/public/stylesheets/forms.css
@@ -41,8 +41,7 @@ form {
   width: 30%; }
 
 .inline-hints {
-  margin: 0.5em .25em;
-  font-size: 8px; }
+  margin: 0.5em .25em; }
 
 form.formtastic fieldset {
   border: 0;
@@ -67,30 +66,27 @@ li.countdown .alert {
 .edit-in-place form {
   display: none; }
 
+.edit-in-place form textarea {
+  font-size: 13px; }
+
 .edit-in-place .actions {
   display: none;
   position: absolute;
-  left: -100px;
-  background: #fff;
-  border: 1px solid #ccc;
-  border-right: none;
-  width: 70px;
-  border-radius: 8px;
-  -moz-border-radius: 8px;
-  -moz-border-radius-topright: 0px;
-  -moz-border-radius-bottomright: 0px;
+  right: 0px;
+  width: 120px;
   top: 10px; }
 
+.edit-in-place .actions li {
+  float: right; }
+
 .edit-in-place .actions li a {
-  border: 1px solid transparent;
-  display: block;
-  font-size: 14px;
-  padding: 0.2em 0.6em;
-  width: 70px; }
+  font-size: 11px;
+  padding: 0 0 0 20px;
+  color: #666;
+  float: right; }
 
 .edit-in-place .actions li a:hover {
-  color: red;
-  display: block; }
+  color: red; }
 
 .edit-in-place:hover .actions {
   display: block; }
@@ -113,3 +109,113 @@ li.countdown .alert {
 
 .edit-in-place-cancel {
   display: none; }
+
+.popup .using .countdown {
+  width: auto;
+  right: 10px; }
+
+li.tool_name_autocomplete .inline-hints {
+  display: none; }
+
+input.autocomplete-toolname {
+  padding-left: 26px;
+  background: url(/images/placeholder.jpg) no-repeat 4px 4px;
+  width: 520px; }
+
+body.popup input.autocomplete-toolname {
+  width: 452px; }
+
+/* Jquery UI for autocomplete */
+.ui-widget-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%; }
+
+.ui-widget-content {
+  border: 1px solid #aaaaaa;
+  background: #ffffff;
+  color: #222222; }
+
+.ui-widget-content a {
+  color: #222222; }
+
+.ui-autocomplete {
+  position: absolute;
+  cursor: default; }
+
+* html .ui-autocomplete {
+  width: 1px; }
+
+/* without this, the menu expands to 100% in IE6 */
+.ui-autocomplete li a img {
+  margin: 0 8px 0 0;
+  float: left;
+  width: 16px; }
+
+.ui-autocomplete li:nth-child(even) {
+  background-color: #eee; }
+
+.ui-menu {
+  list-style: none;
+  padding: 2px;
+  margin: 0;
+  display: block;
+  float: left;
+  font-size: 13px; }
+
+.ui-menu .ui-menu {
+  margin-top: -3px; }
+
+.ui-menu .ui-menu-item {
+  margin: 0;
+  padding: 0;
+  zoom: 1;
+  float: left;
+  clear: left;
+  width: 100%; }
+
+.ui-menu .ui-menu-item a {
+  text-decoration: none;
+  display: block;
+  padding: .2em .4em;
+  line-height: 1.5;
+  zoom: 1; }
+
+.ui-menu .ui-menu-item a.ui-state-hover, .ui-menu .ui-menu-item a.ui-state-active {
+  font-weight: normal;
+  margin: -1px; }
+
+.ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default {
+  border: 1px solid #d3d3d3;
+  background: #e6e6e6;
+  font-weight: normal;
+  color: #555555; }
+
+.ui-state-default a, .ui-state-default a:link, .ui-state-default a:visited {
+  color: #555555;
+  text-decoration: none; }
+
+.ui-state-hover, .ui-widget-content .ui-state-hover, .ui-widget-header .ui-state-hover, .ui-state-focus, .ui-widget-content .ui-state-focus, .ui-widget-header .ui-state-focus {
+  border: 1px solid #999999;
+  background: #dadada;
+  font-weight: normal;
+  color: #212121; }
+
+.ui-state-hover a, .ui-state-hover a:hover {
+  color: #212121;
+  text-decoration: none; }
+
+.ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active {
+  border: 1px solid #aaaaaa;
+  background: #ffffff;
+  font-weight: normal;
+  color: #212121; }
+
+.ui-state-active a, .ui-state-active a:link, .ui-state-active a:visited {
+  color: #212121;
+  text-decoration: none; }
+
+.ui-widget :active {
+  outline: none; }
