Fix for when the description of a using is blank. fallback on the site/tool description but make it a little lighter colored.

--- a/app/stylesheets/list.scss
+++ b/app/stylesheets/list.scss
@@ -85,6 +85,7 @@ ul.count li.pagerank, ul.sort-pagerank li.ind li.pagerank { background-color: gr
 .sublist li.ind ul.mini-categories li,
 .sublist li.ind ul.mini-tools li { float:right; }
 .sublist li.ind p { clear:left; padding-top:4px; }
+.sublist li.ind p.about { color:#888; font-size:12px; }
 
 
 /* * tools#show list of sites using  *
