--- a/public/stylesheets/all.css
+++ b/public/stylesheets/all.css
@@ -355,4 +355,5 @@ ul.count li.pagerank, ul.sort-pagerank li.ind li.pagerank {background-color: gre
 .sublist li.ind ul.mini-categories, .sublist li.ind ul.mini-tools {float: right; max-width: 400px; position: relative}
 .sublist li.ind ul.mini-categories li, .sublist li.ind ul.mini-tools li {float: right}
 .sublist li.ind p {clear: left; padding-top: 4px}
+.sublist li.ind p.about {color: #888; font-size: 12px}
  
