--- a/public/stylesheets/list.css
+++ b/public/stylesheets/list.css
@@ -247,6 +247,10 @@ ul.count li.pagerank, ul.sort-pagerank li.ind li.pagerank {
   clear: left;
   padding-top: 4px; }
 
+.sublist li.ind p.about {
+  color: #888;
+  font-size: 12px; }
+
 /* * tools#show list of sites using  *
 ul.main-list .using { clear:both; margin:1.5em 0 0 0; }
 ul.main-list .using li { float:left; margin-right:10px; }
