--- a/app/views/tools/_header.erb
+++ b/app/views/tools/_header.erb
@@ -25,5 +25,5 @@
       <!-- <li class="right tools-edit"><a href="#">Claim</a></li> -->
     <% end %>
   <% end %>
-  <li class="right tool_sites-manage"><%= link_to "Add sites", manage_tool_sites_path(@tool, :format => params[:format]) %></li> 
+  <li class="right tool_sites-manage"><%= link_to "Manage Sites", manage_tool_sites_path(@tool, :format => params[:format]) %></li> 
 </ul>
