--- a/app/stylesheets/forms.scss
+++ b/app/stylesheets/forms.scss
@@ -6,8 +6,6 @@ form.formtastic fieldset ol li.tokeninput { margin-bottom:2em; }
 
 
 .using textarea { height:55px; width:97%; }
-.using .countdown { margin:0; height:30px; position:absolute; width:580px; }
-.using .countdown span { float:right; }
 
 form { font-size:14px; }
 
@@ -16,30 +14,23 @@ form { font-size:14px; }
 .check_boxes fieldset li { float:left; width:30%; }
 .inline-hints { margin:0.5em .25em; }
 
-form.formtastic fieldset { border:0; background:none; }
+form.formtastic fieldset { border:0; background:none; padding-bottom:0px; }
 
 
 /* forms */
 
 /* Edit tools for site page */
-li.countdown { float:right; font-size: 16px; margin: 0 14px 0 0;}
-li.countdown .alert { color:red; }
 .edit-in-place { position:relative; }
 .edit-in-place:hover { background-color:transparent; }
 .edit-in-place form { display:none; }
 .edit-in-place form textarea { font-size:13px; }
-.edit-in-place .actions { display:none; position:absolute; right:0px; width:120px; top:10px; }
-.edit-in-place .actions li { float:right; }
-.edit-in-place .actions li a { font-size: 11px; padding:0 0 0 20px; color:#666; float:right; }
-.edit-in-place .actions li a:hover { color:red; }
-.edit-in-place:hover .actions { display:block; }
+
 .edit-in-place h4 { font-size: 16px; }
 .edit-in-place p em { color:#777; }
 .editing form.using { display:block; margin:0; }
 .editing form.using fieldset { padding:0; }
 .editing .edit-in-place-show { display:none; }
-.edit-in-place-cancel { display:none; }
-.popup .using .countdown { width:auto; right:10px; }
+.editing p.about { display:none; }
 
 li.tool_name_autocomplete .inline-hints { display:none; }
 input.autocomplete-toolname { padding-left:26px; background:url(/images/placeholder.jpg) no-repeat 4px 4px; width:520px; }
