--- a/app/views/sites/_show.erb
+++ b/app/views/sites/_show.erb
@@ -15,11 +15,39 @@
         </ul>
       </div>
     </div>
+
     <ul id="site-tools-list" class="sublist usings sites <%= sorting_class(params[:sort]) %>">
       <%= render :partial => 'usings/using_tool', :collection => @usings %>
     </ul>
     <% else %>
       <p class="main_message">We don't know of any tools used by <strong><%= @site.title %></strong>.</p>
     <% end %>
+    <p class="add_more">Want to add a tool used on this site? <a href="#add_new_tool" class="add_another_tool">Add it here</a></p>
+    <section id="new_using_form" style="display:none;" class="add_in_place">
+      <a name="add_new_tool"></a>
+      <% if logged_in? %>
+        <%= render 'site_tools/form' %>
+      <% else %>
+        <p class="main_message">You must <%= link_to "sign in", new_user_session_path %> or <%= link_to "sign up", new_user_registration_path %> to add a tool.</p>
+      <% end %>
+    </section>
   </section>
 </section>
+
+<% javascript do %>
+$(function(){
+  $(".add_another_tool").click(function(e) {
+    if($(this).hasClass("showing_form")) {
+      $(".add_another_tool").html("add a tool");
+      $("#new_using_form").slideUp();
+      $(".add_another_tool").removeClass("showing_form");
+      e.preventDefault();
+      return false;
+    } else {
+      $(".add_another_tool").addClass("showing_form");
+      $(".add_another_tool").html("hide form");
+      $("#new_using_form").slideDown();
+    }
+  });
+});
+<% end %>
