--- a/app/stylesheets/forms.scss
+++ b/app/stylesheets/forms.scss
@@ -22,12 +22,12 @@ form.formtastic fieldset { border:0; background:none; padding-bottom:0px; }
 /* Edit tools for site page */
 .edit-in-place { position:relative; }
 .edit-in-place:hover { background-color:transparent; }
-.edit-in-place form { display:none; }
+.edit-in-place form { display:none; clear:both; }
 .edit-in-place form textarea { font-size:13px; }
 
 .edit-in-place h4 { font-size: 16px; }
 .edit-in-place p em { color:#777; }
-.editing form.using { display:block; margin:0; }
+.editing form.using { display:block; margin-top:14px; }
 .editing form.using fieldset { padding:0; }
 .editing .edit-in-place-show { display:none; }
 .editing p.about { display:none; }
