--- a/app/views/usings/_using_tool.erb
+++ b/app/views/usings/_using_tool.erb
@@ -19,11 +19,13 @@
       <p class="edit-in-place-show"><%= using_tool.description %></p>
     <% end %>
     <ul class="actions">
-      <li><%= link_to "comments", site_tool_path(site, tool, :format => params[:format]) %></li>
+      <li class="comments"><%= link_to "comments", site_tool_path(site, tool, :format => params[:format]) %></li>
       <% if logged_in? && current_user.can_edit_using?(using_tool, site) %>
         <li class="edit-in-place-edit"><%= link_to "edit", "#" %></li>
         <li class="edit-in-place-cancel"><%= link_to "cancel", "#" %></li>
-        <li><%= link_to "remove", using_path(using_tool), :remote => true, :method => :delete %></li>
+        <% if current_user.admin? %>
+          <li><%= link_to "remove", using_path(using_tool), :remote => true, :method => :delete, :confirm => "Are you sure you want to delete this association? If you just want to remove the description of how it's used, remove all text and save it." %></li>
+        <% end %>
       <% end %>
     </ul>
   </div>
