--- a/app/views/sites/_show.erb
+++ b/app/views/sites/_show.erb
@@ -20,6 +20,7 @@
       <%= render :partial => 'usings/using_tool', :collection => @usings %>
     </ul>
     <% else %>
+      <ul id="site-tools-list" class="sublist usings sites <%= sorting_class(params[:sort]) %>"></ul>
       <p class="main_message">We don't know of any tools used by <strong><%= @site.title %></strong>.</p>
     <% end %>
     <p class="add_more">Want to add a tool used on this site? <a href="#add_new_tool" class="add_another_tool">Add it here</a></p>
