Added way to revert changes to a site.

--- a/app/views/site_tools/show.html.erb
+++ b/app/views/site_tools/show.html.erb
@@ -3,8 +3,39 @@
   <%= render 'sites/header' %>
 
   <section class="tab">
-    <ul id="site-tools-list" class="sublist usings sites">
+    <ul id="site-tools-list" class="sublist usings sites titleless">
       <%= render :partial => 'usings/using_tool', :object => @using %>
+      <% if logged_in? %>
+      <li class="ind">
+        <a href="#" id="see_history">see history</a>
+        <form action="<%= revert_version_path %>" method="post">
+        <table id="site_tool_history">
+          <tr>
+            <th>Date</th>
+            <th>Editor</th>
+            <th>Action</th>
+            <th style="text-align:center;">Revert</th>
+          </tr>
+        <% @using.versions.each do |version| %>
+          <% if using = version.reify %>
+            <tr>
+              <td><%= using.updated_at %></td>
+              <td><%= link_to using.user.username, profile_path(using.user) %></td>
+              <td><%= version.event %></td>
+              <td style="text-align:center;"><input type="radio" name="id" value="<%= version.id %>" /></td>
+            </tr>
+            <% unless using.description.blank? %>
+            <tr>
+              <td colspan="4"><p>Description: <em><%= truncate(using.description, :length => 200) %></em></p></td>
+            </tr>
+            <% end %>
+          <% end %>
+        <% end %>
+        </table>
+        <p><input type="submit" value="revert" /></p>
+        </form>
+      </li>
+      <% end %>
     </ul>
     <p class="main_message">Discuss how <strong><%= @site.title %></strong> is using <strong><%= @tool.name %></strong>.
     <%= render :partial => 'shared/disqus', :object => "site_#{@site.id}_tool_#{@tool.id}" %>
@@ -17,5 +48,14 @@
 $(function() {  
   using_tool_autocomplete("/sites/<%=@site.cached_slug%>/tools/autocomplete", "#using");
   edit_in_place();
+  $("#see_history").click(function(e){
+    $("#site_tool_history").toggle();
+    if($("#site_tool_history").is(':visible')) {
+      $("#see_history").html("hide history");
+    } else {
+      $("#see_history").html("see history");
+    }
+    
+  });
 });
 <% end %>
