--- a/app/views/site_tools/deleted.erb
+++ b/app/views/site_tools/deleted.erb
@@ -1,7 +1,7 @@
-<% title "Tools used by #{@site.title}" %>
+<% title "Deleted tools by #{@site.title}" %>
 <section id="content" class="main site">
-  <%= render 'header' %>
-  <%= render :partial => "tools", :object => @usings %>
+  <%= render 'sites/header' %>
+  <%= render :partial => "sites/tools", :object => @usings %>
 </section>
 
 <% javascript do %>
@@ -21,3 +21,5 @@ $(function(){
   });
 });
 <% end %>
+
+<%= render 'sites/show_sidebar' %>
