--- a/app/views/usings/_using_tool.erb
+++ b/app/views/usings/_using_tool.erb
@@ -23,7 +23,7 @@
       <% if logged_in? && current_user.can_edit_using?(using_tool, site) %>
         <li class="edit-in-place-edit"><%= link_to "edit", "#" %></li>
         <li class="edit-in-place-cancel"><%= link_to "cancel", "#" %></li>
-        <% if current_user.admin? %>
+        <% if !using_tool.deleted? && current_user.can_destroy_using?(using_tool, site, tool) %>
           <li><%= link_to "remove", using_path(using_tool), :remote => true, :method => :delete, :confirm => "Are you sure you want to delete this association? If you just want to remove the description of how it's used, remove all text and save it." %></li>
         <% end %>
       <% end %>
